readded Spring dependencies security to get rid of errors in exception handling